<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/text_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/mca_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="@dimen/text_margin"
                android:src="@drawable/ic_mca" />

            <TextView
                android:id="@+id/mca_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@string/bold"
                android:text="MCA"
                android:layout_marginLeft="@dimen/text_margin"
                android:paddingTop="5dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/textColor"
                android:textSize="@dimen/title_size" />

        </LinearLayout>

        <TextView
            android:id="@+id/mca_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_college"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:textSize="@dimen/text_size"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/textColor"
            android:fontFamily="@string/light"/>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>